force-app/main/default/objects/Zoom_Metadata__mdt/Zoom_Metadata__mdt.object-meta.xml
<CustomObject>
    <description>It saves record for setting up the Meeting Details</description>
    <label>Zoom Metadata</label>
    <pluralLabel>Zoom Metadata</pluralLabel>
</CustomObject>