force-app/main/default/objects/Zoom_Metadata__mdt/fields/Attendance_Status_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Status_Field_Api_Name__c</fullName>
    <description>This field tracks the zoom meeting attendance status. Make sure Event&apos;s Zoom Meeting Attendance&apos;s picklists values aligned with this field api name to make status reflect as expected.The sync will work only if the API name is provided in this field.</description>
    <inlineHelpText>This field is the child objects status field api name to track the zoom meeting attendance status.Make sure Event&apos;s Zoom Meeting Attendance&apos;s picklists values aligned with this field to reflect the status as expected.</inlineHelpText>
    <label>Attendance Status Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>