force-app/main/default/objects/Zoom_Metadata__mdt/fields/Child_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_API_Name__c</fullName>
    <description>It contains the child object API Name of the record that is used to send an email invite</description>
    <inlineHelpText>It contains the child object API Name of the record that is used to send an email invite</inlineHelpText>
    <label>Child Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>