force-app/main/default/objects/Zoom_Metadata__mdt/fields/Child_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Relationship_Name__c</fullName>
    <description>It contains the value of the child relationship which is mentioned while creating the relationship field</description>
    <inlineHelpText>It contains the value of the child relationship which is mentioned while creating the relationship field.</inlineHelpText>
    <label>Child Relationship Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>