force-app/main/default/objects/Zoom_Metadata__mdt/fields/Contact_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lookup_Field__c</fullName>
    <description>It contains Contact/Lead Lookup Field API Name which is there on the setup or child object.</description>
    <inlineHelpText>It contains ContactLookup Field API Name which is there on the setup or child object</inlineHelpText>
    <label>Contact Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>