force-app/main/default/objects/Zoom_Metadata__mdt/fields/Email_Field_API_Name_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_Field_API_Name_of_Contact__c</fullName>
    <description>It contains the API name of the email field which would be used to send the Event invitation email to all the attendee. These field name must be taken from Contact</description>
    <inlineHelpText>It contains the API name of the email field which would be used to send the Event invitation email to all the attendee. These field name must be taken from Contact</inlineHelpText>
    <label>Email Field API Name of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>