force-app/main/default/objects/Zoom_Metadata__mdt/fields/Lead_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Lookup_Field__c</fullName>
    <description>It contains Lead Lookup Field API Name which is there on the setup or child object</description>
    <inlineHelpText>It contains Lead Lookup Field API Name which is there on the setup or child object</inlineHelpText>
    <label>Lead Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>