force-app/main/default/objects/Zoom_Metadata__mdt/fields/Lookup_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field_API_Name__c</fullName>
    <description>It contains the API name of the lookup field which has been created on the Meeting object</description>
    <inlineHelpText>It contains the API name of the lookup field which has been created on the Meeting object</inlineHelpText>
    <label>Lookup Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>