force-app/main/default/objects/Zoom_Metadata__mdt/fields/Parent_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Name__c</fullName>
    <description>It contains the parent object name where you want a meeting to be created and the invite can be sent to their selected child records</description>
    <inlineHelpText>It contains the parent object name where you want a meeting to be created and the invite can be sent to their selected child records</inlineHelpText>
    <label>Parent Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>